--- a/d_coding/html/layout_012_jq_tab_menu_result.html
+++ b/d_coding/html/layout_012_jq_tab_menu_result.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- html/jq_tab_menu_result.html.html -->
+<!-- html/layout_012_jq_tab_menu_result.html.html -->
 <html lang="ko-KR">
 <head>
   <meta charset="UTF-8">
@@ -23,7 +23,7 @@
   <!-- css design -->
   <link rel="stylesheet" href="../css/base/reset.css">
   <link rel="stylesheet" href="../css/base/common.css">
-  <link rel="stylesheet" href="../css/src/jq_tab_menu_result.css">
+  <link rel="stylesheet" href="../css/src/layout_012_jq_tab_menu_result.css">
 
   <title>웹 기초</title>
   
@@ -72,6 +72,6 @@
   <!-- script -->
   <script src="../js/jquery/jquery-3.6.0.min.js"></script>
   <script src="../js/jquery/jquery-ui.min.js"></script>
-  <script src="../js/src/jq_tab_menu_result.js"></script>
+  <script src="../js/src/layout_012_jq_tab_menu_result.js"></script>
 </body>
 </html>
