--- a/d_coding/html/js_014_gallery_02.html
+++ b/d_coding/html/js_014_gallery_02.html
@@ -46,12 +46,32 @@
     </div>
   
     <div class="part modal">
-
-    </div>
+      <h2>모달 이미지 만들기</h2>
+      <div class="list_slide_btn">
+        <button type="button" class="next_btn">다음</button>
+        <button type="button" class="prev_btn">이전</button>
+      </div>
+      
+      <div class="modal_list">
+        <ul class="clearfix">
+          <!-- <li><a href="#">modal_01</a></li> -->
+        </ul>
+      </div>
+      <div class="modal_view">
+        <div class="front_board">
+          <div class="close_btn"><button type="button"><span>닫기</span></button></div>
+          <div class="modal_content">title</div>
+        </div>
+        <div class="back_board"></div>
+      </div>
+    </div><!-- // .modal -->  
+  
   </div>
+  
   <!-- script -->
   <script src="../js/jquery/jquery-3.6.0.min.js"></script>
   <script src="../js/jquery/jquery-ui.min.js"></script>
   <script src="../js/src/js_014_gallery_02.js"></script>
+  <script src="../js/src/js_014_gallery_02-1.js"></script>
 </body>
 </html>
