--- a/d_coding/index.html
+++ b/d_coding/index.html
@@ -19,6 +19,7 @@
       // window.location = "./html/basic_code_01.html";
       // window.location = "./html/basic_code_02.html";
       window.location = "./html/all_contents.html";
+      // window.location == location
     </script>
   </body>
 </html>
